# llm-arithmetic-internals

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md
docs/: acm_queue_pitch_abstract.md  article_abstract.md  cd_e10_operand_scaling.json  cd_e10_operand_scaling.md  eg_e2c_helix_resolution_sub.json  eg_e2c_helix_resolution_sub.md  eg_e2d_helix_resolution_5chunk_sub.json  eg_e2d_helix_resolution_5chunk_sub.md  eg_e2e_crowding_vs_chunks_sub_all.json  eg_e2e_crowding_vs_chunks_sub_all.md  eg_e2h_crowding_llama31_8b_sub.json  eg_e2h_crowding_llama31_8b_sub.md  goalB3_deepmind_source_audit.json  goalB3_deepmind_source_audit.md  goalB3_final_broad_frozen_arithmetic_adversarial_cross_seed.json  goalB3_final_broad_frozen_arithmetic_adversarial_cross_seed.md  goalB3_final_deepmind_causal_interchange_cross_seed_powered.json  goalB3_final_deepmind_causal_interchange_cross_seed_powered.md  goalB3_final_deepmind_interpolate_recognized_cross_seed.json  goalB3_final_deepmind_interpolate_recognized_cross_seed.md  goalB3_final_frozen_manifest.json  goalB3_final_independent_hard_negative_summary.json  goalB3_final_independent_hard_negative_summary.md  goalB3_final_manifest_verify.json  goalB3_final_replay_provenance_audit_full.json  goalB3_final_replay_provenance_audit_full.md  goalB3_qwen_real_operand_localization.json  goalB3_qwen_real_operand_localization.md  index.html
scripts/: article_helix_figures.py  blender_article_helix_render.py  blender_social_helix_animation.py  export_article_docx.py  export_article_pdf.py  goalB2_chunk_patch_validation.py  (+21 more)
(+90 files in other folders)
