[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "rune"
version = "0.1.0"
description = "Neural-to-symbolic JIT compilation research code for transformers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "h5py>=3.11",
    "transformers>=4.44",
    "einops>=0.8",
    "jaxtyping>=0.2.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]